# mytime

./: README.md  package-lock.json  proxy.conf.json
mytime-api/: .dockerignore  .env  Dockerfile  fly.toml  install.py  pyproject.toml  render.yaml  requirements.txt  start.bat  test_b2_connection.py
mytime-api/.github/workflows/: deploy.yml
mytime-api/alembic/: alembic.ini
mytime-api/app/: .env  main.py
mytime-api/app/api/: version.py
mytime-api/app/core/: config.py  database.py  dependencies.py  middleware.py  security.py
mytime-api/app/models/: add_edit_employee_model.py  application_user.py  attendence.py  auth_response.py  base.py  change_password.py  city.py  country.py  department.py  designation.py  document_type.py  employee.py  employee_address.py  employee_document.py  employee_education.py  employee_emergency_contact.py  employee_employment.py  employee_payment.py  employee_payment_model.py  employee_salary.py  employee_salary_model.py  employee_salary_structure.py  employee_salary_structure_model.py  employee_tution_fees_model.py  holiday_callender.py  leave_attachment.py  leave_balance_model.py  leave_histpry.py  leave_models.py  leave_request.py  leavetype.py  llm_providers.py  llm_schemas.py  mail_box.py  message_type.py  monthly_salary.py  notification_type.py  payment_method.py  payment_type.py  project.py  (+18 more)
mytime-api/app/schemas/: attendence_schemas.py  city_schemas.py  country_schemas.py  department_schemas.py  designation_schemas.py  document_type_schemas.py  employee_address_schemas.py  employee_document_schemas.py  employee_schemas.py  (+19 more)
(+471 files in other folders)
